@@ -1,6 +1,7 @@
 XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 
-* Improvement: scaling of diagram and pictures is now via Ctrl+Mouse wheel
+* Improvement: scaling of diagram and pictures is now via Ctrl + Mouse wheel
+* Improvement: scaling text editor fonts via Ctrl + Mouse wheel
 
 
 2013 Aug 23 Sergey Satskiy <sergey.satskiy@gmail.com>
